Removed duplicate class & added style to gridlex for overflow issue

--- a/style.css
+++ b/style.css
@@ -155,10 +155,6 @@ a:hover {
     text-align: right;
 }
 
-.tall-80 {
-    min-height: 80vh;
-}
-
 /* header & footer styles */
 
 header {
@@ -201,4 +197,9 @@ footer a {
     text-align: center;
     margin-bottom: 2rem;
     font-size: 3rem;
+}
+
+/* Gridlex style */
+[class*="grid-"], [class*="grid_"], [class~="grid"] { 
+    margin:0; 
 }
